shaarli/shaarli-dep.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: shaarli
  name: shaarli
spec:
  replicas: 1
  selector:
    matchLabels:
      app: shaarli
  template:
    metadata:
      labels:
        app: shaarli
    spec:
      containers:
      - image: olibob/shaarli:uid1000
        name: shaarli
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: /var/www/shaarli/data
            name: data
        imagePullPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: shaarli
